tests/try-finally.out
^^^
Cleaning up
Error: Something happened
	at <blade> @.script(tests/try-finally.b:3:21-58)