tests/try-finally.b
try {
  var a = 20
  raise new Error('Something happened')
} finally {
  echo 'Cleaning up'
}